--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -113,10 +113,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/btnGoogleLogin" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnGoogleLogin"
             android:layout_width="219dp"
             android:layout_height="45dp"
             android:layout_marginTop="15dp"
