--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -81,7 +81,7 @@
                         android:src="@drawable/unica" />
 
                     <ImageView
-                        android:id="@+id/imageView11"
+                        android:id="@+id/imgMasDestacados"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
