--- a/app/src/main/res/layout/fragment_pinturas.xml
+++ b/app/src/main/res/layout/fragment_pinturas.xml
@@ -7,96 +7,8 @@
     android:background="#000000"
     tools:context=".fragments.PinturasFragment">
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerId"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <SearchView
-                    android:id="@+id/searchView"
-                    android:layout_width="367dp"
-                    android:layout_height="32dp"
-                    android:layout_marginTop="15dp"
-                    android:background="#3C3C3C"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtTitlePinturas" />
-
-                <TextView
-                    android:id="@+id/txtTitlePinturas"
-                    android:layout_width="135dp"
-                    android:layout_height="36dp"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="sans-serif-black"
-                    android:text="Galeria I"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <LinearLayout
-                    android:id="@+id/linearLayout2"
-                    android:layout_width="380dp"
-                    android:layout_height="90dp"
-                    android:layout_marginTop="20dp"
-                    android:background="#222222"
-                    android:orientation="horizontal"
-                    app:layout_constraintTop_toBottomOf="@+id/searchView"
-                    tools:layout_editor_absoluteX="16dp">
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="126dp"
-                        android:layout_height="90dp"
-                        android:src="@drawable/mona_lisa" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView8"
-                            android:layout_width="156dp"
-                            android:layout_height="26dp"
-                            android:fontFamily="sans-serif-black"
-                            android:text="La Monalisa "
-                            android:textColor="#FFFFFF"
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:id="@+id/textView8"
-                            android:layout_width="158dp"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif"
-                            android:text="Leonardo Davinci"
-                            android:textColor="#FFFFFF"
-                            android:textSize="16sp" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="413dp"
-                    android:layout_height="514dp"
-                    android:layout_marginTop="15dp"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-                </androidx.recyclerview.widget.RecyclerView>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </LinearLayout>
-    </ScrollView>
-
+        android:layout_height="wrap_content"/>
 </FrameLayout>
