--- a/app/src/main/res/layout/item_list_pinturas.xml
+++ b/app/src/main/res/layout/item_list_pinturas.xml
@@ -28,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nombre"
+                android:textColor="@color/white"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
@@ -35,6 +36,7 @@
                 android:id="@+id/idArtista"
                 android:layout_width="83dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="15dp"
                 android:text="Artista"
