--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -4,92 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".fragments.FavoritosFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerId2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#000000"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="134dp">
-
-                <ImageView
-                    android:id="@+id/imageView6"
-                    android:layout_width="66dp"
-                    android:layout_height="73dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="29dp"
-                    android:src="@drawable/monalisa"
-
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="28dp"
-
-                    android:background="#000000"
-                    android:text="Monalisa"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageView6"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.302" />
-
-                <TextView
-                    android:id="@+id/txtAutorDescri"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:text="Autor: "
-                    android:textColor="@color/white"
-                    app:layout_constraintEnd_toStartOf="@+id/imageView7"
-                    app:layout_constraintHorizontal_bias="0.129"
-                    app:layout_constraintStart_toEndOf="@+id/imageView6"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-                <TextView
-                    android:id="@+id/txtTitlePinturas"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="124dp"
-                    android:text="Leonardo Davinci"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/white"
-                    app:layout_constraintEnd_toStartOf="@+id/imageView7"
-                    app:layout_constraintTop_toBottomOf="@+id/txtAutorDescri" />
-
-                <ImageView
-                    android:id="@+id/imageView7"
-                    android:layout_width="43dp"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="45dp"
-                    android:src="@drawable/baseline_favorite_24"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.852"
-                    app:layout_constraintStart_toEndOf="@+id/textView5"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content"/>
 </FrameLayout>
