--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -61,7 +61,7 @@
             android:ems="10"
             android:hint="Correo"
             android:inputType="textEmailAddress"
-            android:text="admin"
+            android:text=""
             android:textColor="#FFFFFF"
             android:textColorHighlight="@color/white"
             android:textColorHint="@color/white"
@@ -95,7 +95,7 @@
             android:ems="10"
             android:hint="Contraseña"
             android:inputType="textPassword"
-            android:text="admin"
+            android:text=""
             android:textColor="@color/white"
             android:textColorHighlight="@color/white"
             android:textColorHint="@color/white"
