--- a/app/src/main/res/layout/fragment_pinturas.xml
+++ b/app/src/main/res/layout/fragment_pinturas.xml
@@ -7,8 +7,29 @@
     android:background="#000000"
     tools:context=".fragments.PinturasFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerId"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tituloGaleria"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Galeria 1"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="35sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerId"
+            android:layout_marginTop="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout>
+
 </FrameLayout>
