--- a/app/src/main/res/layout/fragment_descripcion_pintura.xml
+++ b/app/src/main/res/layout/fragment_descripcion_pintura.xml
@@ -45,14 +45,38 @@
                     android:layout_marginTop="20dp"
                     android:src="@drawable/dos" />
 
-                <ImageView
-                    android:id="@+id/btnPlayAudio"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="53dp"
-                    android:layout_marginStart="305dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginEnd="40dp"
-                    android:src="@drawable/baseline_play_circle_outline_24" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/btnPlayAudio"
+                            android:layout_width="82dp"
+                            android:layout_height="61dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="124dp"
+                            android:src="@drawable/baseline_play_circle_outline_24"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <ImageView
+                            android:id="@+id/brnFavoritos"
+                            android:layout_width="82dp"
+                            android:layout_height="61dp"
+                            android:layout_marginTop="16dp"
+                            android:src="@drawable/baseline_favorite_border_24"
+                            app:layout_constraintEnd_toStartOf="@+id/btnPlayAudio"
+                            app:layout_constraintHorizontal_bias="0.91"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/textView4"
