--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,6 +11,105 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="411dp"
+            android:layout_height="503dp"
+            android:layout_marginTop="2dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            tools:layout_editor_absoluteX="1dp">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="309dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="186dp"
+                android:text="Inicio de Sesion"
+                android:textColor="@color/white"
+                android:textSize="28dp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+
+                android:layout_marginTop="20dp"
+                android:text="Inicia sesión con tu Usuario y Contraseña"
+                android:textAlignment="viewStart"
+                android:textColor="@color/white" />
+
+            <EditText
+                android:id="@+id/edtCorreo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="173dp"
+                android:backgroundTint="@color/Line"
+                android:ems="10"
+                android:hint="Correo"
+                android:inputType="textEmailAddress"
+                android:text=""
+                android:textColor="#FFFFFF"
+                android:textColorHighlight="@color/white"
+                android:textColorHint="@color/white"
+                tools:textColor="#FFFFFF"
+                tools:textColorHint="#FFFEFF" />
+
+            <EditText
+                android:id="@+id/edtPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="173dp"
+                android:backgroundTint="@color/Line"
+                android:ems="10"
+                android:hint="Contraseña"
+                android:inputType="textPassword"
+                android:text=""
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/white"
+                android:textColorHint="@color/white" />
+
+            <TextView
+                android:id="@+id/txtRegistrate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="95dp"
+                android:layout_marginTop="20dp"
+                android:text="¿No tienes cuenta? Regístrate"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_width="219dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="80dp"
+                android:layout_marginTop="40dp"
+
+                android:backgroundTint="@color/white"
+                android:text="Iniciar sesion"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/btnGoogleLogin"
+                android:layout_width="219dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="80dp"
+                android:layout_marginTop="15dp"
+
+                android:backgroundTint="@color/white"
+                android:drawableRight="@drawable/google"
+                android:drawablePadding="8dp"
+                android:text="Inicia sesion con"
+                android:textColor="@color/black"
+                android:textSize="14dp" />
+        </LinearLayout>
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="414dp"
@@ -19,116 +118,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="186dp"
-            android:text="Inicio de Sesion"
-            android:textColor="@color/white"
-            android:textSize="28dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-
-            android:layout_marginTop="20dp"
-            android:text="Inicia sesión con tu Usuario y Contraseña"
-            android:textAlignment="viewStart"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-        <EditText
-            android:id="@+id/edtCorreo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="173dp"
-            android:backgroundTint="@color/Line"
-            android:ems="10"
-            android:hint="Correo"
-            android:inputType="textEmailAddress"
-            android:text=""
-            android:textColor="#FFFFFF"
-            android:textColorHighlight="@color/white"
-            android:textColorHint="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            tools:textColor="#FFFFFF"
-            tools:textColorHint="#FFFEFF" />
-
-        <Button
-            android:id="@+id/btnLogin"
-            android:layout_width="219dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="40dp"
-            android:backgroundTint="@color/white"
-            android:text="Iniciar sesion"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
-
-        <EditText
-            android:id="@+id/edtPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="173dp"
-            android:backgroundTint="@color/Line"
-            android:ems="10"
-            android:hint="Contraseña"
-            android:inputType="textPassword"
-            android:text=""
-            android:textColor="@color/white"
-            android:textColorHighlight="@color/white"
-            android:textColorHint="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtCorreo" />
-
-        <TextView
-            android:id="@+id/txtRegistrate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="¿No tienes cuenta? Regístrate"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnGoogleLogin" />
-
-        <Button
-            android:id="@+id/btnGoogleLogin"
-            android:layout_width="219dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="15dp"
-            android:backgroundTint="@color/white"
-            android:drawableRight="@drawable/google"
-            android:drawablePadding="8dp"
-            android:text="Inicia sesion con"
-            android:textColor="@color/black"
-            android:textSize="14dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
